tests/negative/neg_qualified_channel_reference.safe
-- Test: neg_qualified_channel_reference
-- Description: Package-qualified channel references require a matching dependency interface.
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p27:ef0ce6bd
-- Clause: SAFE@468cf72:spec/04-tasks-and-channels.md#4.3.p28:ea6bd13c
-- Expected: REJECT source_frontend_error

with remote_package;

package qualified_channel_reference_test

   type message is range 0 to 100;

   task worker

      loop
         send remote_package.data_ch, 1;

